#408 Firefox-fix: word-wrap instead of word-break

--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -916,7 +916,7 @@ tr.queue-item>td:first-child>a {
 }
 
 .history-status-table .col-sm-10 {
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
 .history-status-table a {
